Pages were added

--- a/app/assets/contact.html
+++ b/app/assets/contact.html
@@ -43,12 +43,12 @@
                             <ul class="list navigation__list navigation__list_end">
                                 <li class="navigation__list-item"><a class="navigation__list-link" href="#">О фонде</a>
                                 </li>
-                                <li class="navigation__list-item"><a class="navigation__list-link navigation__list-link_active" href="#">Мы с вами
+                                <li class="navigation__list-item"><a class="navigation__list-link" href="#">Мы с вами
                                         помогли</a></li>
-                                <li class="navigation__list-item"><a
-                                        class="navigation__list-link" href="#">Генетические
+                                <li class="navigation__list-item"><a class="navigation__list-link" href="#">Генетические
                                         заболевания</a></li>
-                                <li class="navigation__list-item"><a class="navigation__list-link" href="#">Контакты</a>
+                                <li class="navigation__list-item"><a
+                                        class="navigation__list-link navigation__list-link_active" href="#">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -59,7 +59,7 @@
     </header>
     <!-- End header -->
     <!-- Begin main -->
-    <main class="main template help-template">
+    <main class="main template contact-template">
         <div class="template__wrapper">
             <div class="container">
                 <div class="row">
@@ -67,23 +67,85 @@
                         <div class="breadcrumbs template__breadcrumbs">
                             <a href="#">Главная</a>
                             |
-                            <a href="#">Мы с вами помогли</a>
-                            |
-                            <span>Две девочки</span>
+                            <span>Контакты</span>
                         </div>
-                        <h1 class="template__title">Две девочки</h1>
-                        <span class="template__note">Калининградская область</span>
+                        <h1 class="template__title">Контакты</h1>
                         <div class="template__grid">
-                            <div class="template__content">
-                                <p>Семья очень ждала рождения первенца, но девочка оказалась тяжело больна. Проведенные обследования не выявляли причины заболевания. Родители решились на рождение второго ребенка, но и у второй девочки появилась схожая клиника заболевания. И вновь обследования не помогли установить причину. На средства Фонда Геном Жизни были проведены исследования полного генома двух девочек и генетическое исследование родителей, что позволило выявить причину заболевания, носителями которого были родители. Девочки унаследовали две разные особенные поломки одного и того же гена от двух родителей.</p>
-                                <p>Спустя 10 лет от начала поиска причины состояния их детей, стала ясна генетическая основа заболевания, что позволит супругам в дальнейшем произвести на свет здорового малыша и обеспечить должный уход за своими детьми.</p>
+                            <div class="row">
+                                <div class="col-4 template__grid-col">
+                                    <div class="contact-info">
+                                        <h2 class="contact-info__title">Наш адрес</h2>
+                                        <div class="contact-info__value">
+                                            <p>115162, улица Лестева, дом 18, этаж 2, помещение III, комната 4</p>
+                                        </div>
+                                        <div class="contact-info__value">
+                                            <b>Телефон</b><br>
+                                            <a href="tel:+74951807338">+7(495) 180-73-38</a>
+                                        </div>
+                                        <div class="contact-info__value">
+                                            <b>Эл. почта</b><br>
+                                            <a href="mailto:expert@fondgenom.ru">expert@fondgenom.ru</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-8 template__grid-col">
+                                    <div class="contact-template__map">
+                                        <script type="text/javascript" charset="utf-8" async
+                                            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab640ba9c0e55efa329eb0501d2d564163153756d07d8c337c296ec616d525cd3&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=false">
+                                        </script>
+                                    </div>
+                                </div>
                             </div>
-                            <a class="template__grid-link" href="#">
-                                <svg width="34.354" height="17.593"><g fill="none"><path d="M.354.239h34v17h-34z"/><path d="M33.062 8.797H1.413M1.414 8.797l8.437-7.385M1.414 8.797l8.44 7.386" stroke="#f28314" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="79.84" stroke-width="2"/></g></svg>
-                                Вернуться в раздел
-                            </a>
                         </div>
-                        <div class="help-form template__help-form">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contact-template__wrapper">
+            <div class="company-info">
+                <div class="company-info__wrapper">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <h3 class="company-info__title">Реквизиты фонда</h3>
+                                <div class="row">
+                                    <div class="col-5 company-info__col">
+                                        <p><b>Благотворительный фонд медико-социальных генетических проектов помощи «Геном Жизни»</b></p>
+                                        <p>
+                                            ОГРН: 1207700282591<br>
+                                            ОКПО: 45188567<br>
+                                            ОКВЭД: 64.19<br>
+                                            ОКАТО 45296559000<br>
+                                            ОКТМО 45914000000<br>
+                                            ОКОГУ 4210014
+                                        </p>
+                                    </div>
+                                    <div class="col-5 company-info__col offset-1">
+                                        <p><b>Юридический адрес</b><br>115162, улица Лестева, дом 18,<br>этаж 2, помещение III, комната 4</p>
+                                        <p>
+                                            Банковские реквизиты<br>
+                                            ИНН: 9725034719,<br>
+                                            КПП: 772501001<br>
+                                            Р/с: 40703810500000002322<br>
+                                            в ПАО Промсвязьбанк, г. Москва<br>
+                                            К/с: 30101810400000000555 в ГУ Банка России по ЦФО<br>
+                                            БИК: 044525555
+                                        </p>
+                                        <p>
+                                            <b>Назначение платежа</b><br>
+                                            «Целевое поступление — пожертвование на реализацию программы „Геном жизни“»
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="help-form template__help-form contact-template__form">
+                    <div class="row">
+                        <div class="col-12">
                             <div class="help-form__wrapper">
                                 <form class="form help-form__instance">
                                     <span class="help-form__title">Я хочу помочь</span>
@@ -104,9 +166,11 @@
                                             <input name="value" type="radio" class="radio__input" value="1000">
                                             <span class="radio__name form__input">1000</span>
                                         </label>
-                                        <input type="text" placeholder="Другая сумма" class="form__input form__value-input help-form__value-input">
+                                        <input type="text" placeholder="Другая сумма"
+                                            class="form__input form__value-input help-form__value-input">
                                     </div>
-                                    <button type="submit" class="btn btn_size-m btn_is-colored form__btn help-form__btn">Пожертвовать</button>
+                                    <button type="submit"
+                                        class="btn btn_size-m btn_is-colored form__btn help-form__btn">Пожертвовать</button>
                                 </form>
                             </div>
                         </div>
@@ -188,7 +252,18 @@
         <div class="modal__wrapper">
             <span class="modal__title">Семейная гиперхолестеринемия</span>
             <div class="modal__content">
-                <p>Считается самым частым генетическим заболеванием человека. Если больной унаследует ген, вызывающий заболевание, и от отца, и от матери, то течение будет очень тяжелым и продолжительность жизни резко уменьшается (большинство больных умирает от инфаркта или инсульта до 30 летнего возраста, в том числе высока и детская смертность). Если наследуется больной ген только от одного из родителей, заболевание протекает легче, но все равно риск ранней сердечно-сосудистой смерти повышается в 20 раз. Сначала заболевание протекает незаметно: наблюдается только значительно повышенный уровень холестерина в крови (фракция низкой плотности). Потом появляются симптомы отложения холестерина под кожей в области сухожилий, глаз и симптомы сердечно-сосудистых осложнений из-за отложений холестерина на стенках сосудов и на клапанах сердца (в том числе развивается ишемическая болезнь сердца, приводящая к инфаркту миокарда). Понизить уровень холестерина низкой плотности при этом заболевании диетой невозможно. Заболевание имеет эффективное медикаментозное лечение, поэтому критически важно о нем узнать как можно раньше.</p>
+                <p>Считается самым частым генетическим заболеванием человека. Если больной унаследует ген, вызывающий
+                    заболевание, и от отца, и от матери, то течение будет очень тяжелым и продолжительность жизни резко
+                    уменьшается (большинство больных умирает от инфаркта или инсульта до 30 летнего возраста, в том
+                    числе высока и детская смертность). Если наследуется больной ген только от одного из родителей,
+                    заболевание протекает легче, но все равно риск ранней сердечно-сосудистой смерти повышается в 20
+                    раз. Сначала заболевание протекает незаметно: наблюдается только значительно повышенный уровень
+                    холестерина в крови (фракция низкой плотности). Потом появляются симптомы отложения холестерина под
+                    кожей в области сухожилий, глаз и симптомы сердечно-сосудистых осложнений из-за отложений
+                    холестерина на стенках сосудов и на клапанах сердца (в том числе развивается ишемическая болезнь
+                    сердца, приводящая к инфаркту миокарда). Понизить уровень холестерина низкой плотности при этом
+                    заболевании диетой невозможно. Заболевание имеет эффективное медикаментозное лечение, поэтому
+                    критически важно о нем узнать как можно раньше.</p>
             </div>
         </div>
     </div>
