--- a/app/assets/health.html
+++ b/app/assets/health.html
@@ -135,7 +135,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="help-form template__help-form">
+                        <div class="help-form template__help-form health-template__form">
                             <div class="help-form__wrapper">
                                 <form class="form help-form__instance">
                                     <span class="help-form__title">Я хочу помочь</span>
