--- a/app/assets/help-single.html
+++ b/app/assets/help-single.html
@@ -83,7 +83,7 @@
                                 Вернуться в раздел
                             </a>
                         </div>
-                        <div class="help-form template__help-form help-template__form">
+                        <div class="help-form template__help-form">
                             <div class="help-form__wrapper">
                                 <form class="form help-form__instance">
                                     <span class="help-form__title">Я хочу помочь</span>
