The make help page was added

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -94,8 +94,7 @@
                                     Генетические технологии служат важным инструментом при постановке диагноза и
                                     определении первопричины проблемы, что в дальнейшем позволяет сохранить жизни и
                                     повысить ее качество для каждого члена семьи вне зависимости от возраста и пола.</p>
-                                <p><b>Мы делаем дорогостоящие технологии доступными сегодня тем, кто в них
-                                        нуждается.</b></p>
+                                <p><b>Мы делаем дорогостоящие технологии доступными сегодня тем, кто в них нуждается.</b></p>
                             </div>
                             <div class="number about-section__number">
                                 <span class="number__value">196</span>
