--- a/app/assets/make-help.html
+++ b/app/assets/make-help.html
@@ -124,8 +124,14 @@
                                         <img src="img/google-pay.svg" alt="alt">
                                     </div>
                                     <div class="make-help-template__links">
-                                        <a href="#">Гарантии безопасности</a>
-                                        <a href="#">Дополнительная информация</a>
+                                        <button type="button">Гарантии безопасности</button>
+                                        <div class="make-help-template__links-content">
+                                            <p>Текст</p>
+                                        </div>
+                                        <button type="button">Дополнительная информация</button>
+                                        <div class="make-help-template__links-content">
+                                            <p>Текст</p>
+                                        </div>
                                     </div>
                                     <div class="make-help-template__icons">
                                         <img src="img/visa.svg" alt="alt">
