--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,8 @@
                                 <p>медико-социальных генетических проектов помощи «<b>Геном жизни</b>»</p>
                             </div>
                             <footer class="hero__footer">
-                                <a href="#" class="btn btn_is-colored hero__btn">Подробнее о фонде</a>
-                                <a href="#" class="btn hero__btn">Нуждаюсь в помощи</a>
+                                <a href="#" class="btn btn_size-s btn_is-colored hero__btn">Подробнее о фонде</a>
+                                <a href="#" class="btn btn_size-s hero__btn">Нуждаюсь в помощи</a>
                             </footer>
                         </div>
                     </div>
@@ -555,7 +555,7 @@
                         </div>
                     </div>
                     <div class="col-7 footer__col">
-                        <button class="btn btn_is-colored footer__btn" type="button">Напишите нам</button>
+                        <button data-modal="#order-modal" class="btn btn_is-colored footer__btn" type="button">Напишите нам</button>
                         <p class="footer__copyright">&copy; 2021. Геном Жизни - благотворительный фонд</p>
                     </div>
                     <div class="col-5 footer__col">
@@ -576,7 +576,28 @@
     </footer>
     <!-- End footer -->
     <!-- Begin modal -->
-    <div class="modal"></div>
+    <div id="order-modal" class="modal order-modal">
+        <div class="modal__wrapper">
+            <span class="modal__title">Напишите нам</span>
+            <div class="modal__grid">
+                <form class="form modal__form">
+                    <div class="form__row">
+                        <input type="text" class="form__input" placeholder="Представьтесь:">
+                    </div>
+                    <div class="form__row">
+                        <input type="tel" class="form__input" placeholder="Телефон:">
+                    </div>
+                    <div class="form__row">
+                        <input type="email" class="form__input" placeholder="Email:">
+                    </div>
+                    <div class="form__row">
+                        <textarea placeholder="Текст сообщения:" name="message" class="form__input form__textarea"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn_is-colored form__btn">Отправить сообщение</button>
+                </form>
+            </div>
+        </div>
+    </div>
     <!-- End modal -->
     <!-- BEGIN scripts -->
     <script src="js/application.js"></script>
