Mobile styles were added

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -194,7 +194,8 @@
                         <div class="row">
                             <div class="col-12 section__col">
                                 <h3 class="section__title help-section__title">Мы с вами помогли</h3>
-                                <div class="d-none d-xl-flex carousel-navigation section__navigation help-section__navigation">
+                                <div
+                                    class="d-none d-xl-flex carousel-navigation section__navigation help-section__navigation">
                                     <button type="button"
                                         class="carousel-navigation__btn carousel-navigation__btn-prev">
                                         <svg width="12.884" height="20.271">
@@ -305,6 +306,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="d-xl-none swiper-pagination help-section__pagination"></div>
                 </div>
             </div>
         </section>
@@ -315,7 +317,8 @@
                         <div class="row">
                             <div class="col-12 section__col">
                                 <h3 class="section__title help-section__title">Генетические заболевания</h3>
-                                <div class="d-none d-xl-flex carousel-navigation section__navigation help-section__navigation">
+                                <div
+                                    class="d-none d-xl-flex carousel-navigation section__navigation help-section__navigation">
                                     <button type="button"
                                         class="carousel-navigation__btn carousel-navigation__btn-prev">
                                         <svg width="12.884" height="20.271">
@@ -390,6 +393,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="d-xl-none swiper-pagination help-section__pagination"></div>
                 </div>
             </div>
         </section>
@@ -581,7 +585,8 @@
                         </div>
                     </div>
                     <div class="col-12 col-xl-8 footer__col">
-                        <button data-modal="#order-modal" class="d-xl-none btn btn_is-colored footer__btn" type="button">Напишите нам</button>
+                        <button data-modal="#order-modal" class="d-xl-none btn btn_is-colored footer__btn"
+                            type="button">Напишите нам</button>
                         <div class="footer__navigation">
                             <div class="footer__navigation-col">
                                 <a href="#" class="footer__navigation-link">О фонде</a>
@@ -604,8 +609,10 @@
                         </div>
                     </div>
                     <div class="col-12 col-xl-7 footer__col">
-                        <button data-modal="#order-modal" class="d-none d-xl-block btn btn_is-colored footer__btn" type="button">Напишите нам</button>
-                        <p class="d-none d-xl-block footer__copyright">&copy; 2021. Геном Жизни - благотворительный фонд</p>
+                        <button data-modal="#order-modal" class="d-none d-xl-block btn btn_is-colored footer__btn"
+                            type="button">Напишите нам</button>
+                        <p class="d-none d-xl-block footer__copyright">&copy; 2021. Геном Жизни - благотворительный фонд
+                        </p>
                     </div>
                     <div class="col-12 col-xl-5 footer__col">
                         <div class="footer__search">
@@ -650,6 +657,42 @@
         </div>
     </div>
     <!-- End modal -->
+    <!-- BEGIN MOBILE LAYOUT -->
+    <div class="m-layout">
+        <div class="m-layout__wrapper">
+            <div class="m-layout__top m-layout__row">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <header class="m-layout__header">
+                                <a class="m-layout__header-link" href="#">Нужна помощь</a>
+                                <a class="m-layout__header-link m-layout__header-link_is-colored" href="#">Хочу
+                                    помочь</a>
+                            </header>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="m-layout__bottom m-layout__row">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="m-layout__grid">
+                                <a class="m-layout__grid-link" href="#">О фонде</a>
+                                <a class="m-layout__grid-link" href="#">Вы с вами помогли</a>
+                                <a class="m-layout__grid-link" href="#">Генетические заболевания</a>
+                                <a class="m-layout__grid-link" href="#">Команда</a>
+                                <a class="m-layout__grid-link" href="#">Попечительский совет</a>
+                                <a class="m-layout__grid-link" href="#">Новости и события</a>
+                                <a class="m-layout__grid-link" href="#">Контакты</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END MOBILE LAYOUT -->
     <!-- BEGIN scripts -->
     <script src="js/application.js"></script>
     <!-- END scripts -->
